# ddareungi

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: default_env.yaml
docs/: 01_detailed_design.md  02_team_review_brief.md  03_real_data_eda.md
docs/presentations/: artifact-build-manifest.json  ddareungi_team_review.pptx
sample_data/: toy_demand_return.json
src/ddareungi_rl/: __init__.py  baselines.py  cli.py  config_loader.py  dashboard.py  data_profile.py  dqn.py  env.py  experiment_log.py  profile_builder.py  reporting.py  stations.py  visualization.py
src/ddareungi_rl/agents/: __init__.py  dqn.py  torch_dqn.py
src/ddareungi_rl/algorithms/: __init__.py  common.py  double_dqn.py  dqn.py  dueling_dqn.py  networks.py
src/ddareungi_rl/data/: __init__.py  build_station_hour_profile.py  inspect_rental_csv.py  profile_loader.py  real_data.py
src/ddareungi_rl/envs/: __init__.py  toy_ddareungi_env.py
src/ddareungi_rl/policies/: __init__.py  baselines.py
src/ddareungi_rl/training/: __init__.py  env_factory.py  evaluate.py  train_dqn.py  train_torch_dqn.py
src/ddareungi_rl/tutorials/: __init__.py  env_step_walkthrough.py
src/ddareungi_rl/visualization/: __init__.py  demo.py  pixel_replay.py  pygame_replay.py
tests/: __init__.py  profile_fixture.py  test_cli.py  test_demo.py  test_dqn.py  test_pixel_replay.py  test_pygame_replay.py  test_real_data_profile.py  test_simple_project.py  test_toy_ddareungi_env.py  test_train_dqn.py  test_train_torch_dqn.py
