[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ddareungi-rl"
version = "0.1.0"
description = "DQN-based Ddareungi bike repositioning simulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.26",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
ddareungi = "ddareungi_rl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
