[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ddareungi-rl"
version = "0.1.0"
description = "DQN-based Ddareungi bike repositioning simulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "torch>=2.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
ddareungi = "ddareungi_rl.cli:main"
ddareungi-build-profile = "ddareungi_rl.profile_builder:main"

[tool.setuptools.packages.find]
where = ["src"]
